@@ -24,6 +24,7 @@ class MemRL:
             IO.renew_dir(P.sync_dir)
 
         # 2. show args
+        Funcs.print_obj(P.C)
         Funcs.print_obj(P)
 
         # 3. prepare queues for learner and actor
@@ -36,18 +37,33 @@ class MemRL:
             learner_actor_queues.append(Queue())
 
         # 4. launch
-        Process(target=MemRL.learner_run, args=(
+        processes = []
+
+        learner_process = Process(target=MemRL.learner_run, args=(
             actor_learner_queues,
             learner_actor_queues,
             finish
-        )).start()
+        ))
+        learner_process.start()
+        processes.append(learner_process)
+
         for id in range(P.num_actor):
-            Process(target=MemRL.actor_run, args=(
+            p = Process(target=MemRL.actor_run, args=(
                 id,
                 actor_learner_queues[id],
                 learner_actor_queues[id],
                 finish
-            )).start()
+            ))
+            p.start()
+            processes.append(p)
+
+        try:  # process exception detection
+            for p in processes:
+                p.join()
+        except KeyboardInterrupt:
+            pass
+        except Exception:
+            Funcs.trace_exception()
 
     @staticmethod
     def learner_run(actor_learner_queues, learner_actor_queues, finish):
@@ -57,7 +73,7 @@ class MemRL:
 
         # 2. train
         policy = Policy(actor_learner_queues, learner_actor_queues)
-        try:
+        try:  # sub-process exception detection
             # start CUDA multi-process server 
             os.environ["CUDA_VISIBLE_DEVICES"] = f"{str(P.gpus).replace(' ', '')[1:-1]}"
             Logger.log("start cuda mps")
@@ -66,7 +82,9 @@ class MemRL:
             optimal_graph = policy.train()  # tain the policy
         except KeyboardInterrupt:
             Logger.log("ctrl-c pressed")
-            exit(0)
+            policy.terminate()
+        except FileNotFoundError:
+            Logger.log("optimal graph not found, training failed")
         except Exception:
             Funcs.trace_exception()
         finally:
@@ -77,7 +95,7 @@ class MemRL:
         finish.value = True
 
         # 3. parameterization
-        try:
+        try:  # sub-process exception detection
             # TODO: Q-table parameterization
             pass
         except Exception:
@@ -86,7 +104,7 @@ class MemRL:
         
         # 4. output time
         minutes = (time.time() - start_time) / 60
-        Logger.log(f"learner exit, up {minutes:.1f} min")
+        Logger.log(f"up {minutes:.1f} min, learner exit")
         
     @staticmethod
     def actor_run(id, actor_learner_queues, learner_actor_queues, finish):
@@ -97,8 +115,10 @@ class MemRL:
 
         # 2. start interaction loop (actor loop)
         while True:
-            try:
+            try:  # sub-process exception detection
                 actor.interact()
+            except KeyboardInterrupt:
+                pass
             except Exception:
                 if finish.value:
                     Logger.log(f"actor{id} exit")
@@ -108,13 +128,19 @@ class MemRL:
 
     @staticmethod
     def create_env(render=False):
-        if P.env_type == "atari":
+        if P.env_type == P.env_types[0]:
             from src.module.env.atari import Atari
             return Atari.make_env(render)
-        if P.env_type == "atari_ram":
+        if P.env_type == P.env_types[1]:
+            from src.module.env.atari_alternative import Atari
+            return Atari.make_env(render)
+        if P.env_type == P.env_types[2]:
+            from src.module.env.atari_history_hash import Atari
+            return Atari.make_env(render)
+        if P.env_type == P.env_types[3]:
             from src.module.env.atari_ram import AtariRam
             return AtariRam.make_env(render)
-        if P.env_type == "simple_scene":
+        if P.env_type == P.env_types[4]:
             from src.module.env.simple_scene import SimpleScene
             return SimpleScene.make_env(render)
 
