@@ -34,9 +34,11 @@ class Actor:
             self.actor_learner_queue.put([last_obs, pre_action, obs, reward, done, not self.is_testing_actor()])
         
         while True:
-            try:
+            try:  # sub-process exception detection
                 action = self.learner_actor_queues.get(timeout=0.1)
                 break
+            except KeyboardInterrupt:
+                pass
             except Exception:
                 if self.finish.value:
                     raise Exception()
@@ -74,7 +76,8 @@ class Actor:
             while True:  # step loop
                 # 1. get action
                 action = self.get_action(last_obs, pre_action, obs, reward, done, epi_step == 1)
-                last_obs = obs.copy()
+                # last_obs = obs.copy()
+                last_obs = obs
 
                 # 2. interact
                 obs, reward, done, info = self.env.step(action)
